--- a/Starter_Code/san_francisco_housing.ipynb
+++ b/Starter_Code/san_francisco_housing.ipynb
@@ -2313,21 +2313,27 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "**Question:**  How does the trend in rental income growth compare to the trend in sales prices? Does this same trend hold true for all the neighbourhoods across San Francisco?\n",
     "\n",
-    "**Answer:** # YOUR ANSWER HERE"
+    "**Answer:** # Although growth in both, rental income and sales prices, was positive; the growth trend in rental income was way more than the trend of increase in sale prices in San Francisco (Sale Prices actually dipped in 2012 and 2016, in respect to previous year which did not happen with rental income)\n",
+    "\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "**Question:** What insights can you share with your company about the potential one-click, buy-and-rent strategy that they're pursuing? Do neighbourhoods exist that you would suggest for investment, and why?\n",
     "\n",
-    "**Answer:** # YOUR ANSWER HERE"
+    "**Answer:** # I believe that the one-click, buy-and-rent strategy that we are pursuing could be most impactful in neighbourhoods which have low sale prices in respect to the rental income. Home owners in such neighbourhoods would be more open to the idea as it is most beneficial to them. \n",
+    "Examples of such neighbourhoods: 1. (Lat 37.7287, Lon -122.4110) Gross Rent: $3657; Sale Price per Sq foot: $301.466\n",
+    "2. (Lat 37.7347, Lon -122.4011) Gross Rent: $3528; Sale Price per Sq foot: $170.293\n",
+    "3. (Lat 37.7228, Lon -122.4387) Gross Rent: $2996; Sale Price per Sq foot: $242.371\n"
    ]
   },
   {
